# wirelessifier

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.backup  sdkconfig.esp32s3  sdkconfig.esp32s3.old
docs/: MANUAL.md
docs/battery/: plot_log.py
main/: .clangd  CMakeLists.txt  ble_hid_device.c  ble_hid_device.h  const.h  hid_bridge.c  hid_bridge.h  idf_component.yml  main.c  rgb_utils.c  rgb_utils.h  usb_hid_host.c  usb_hid_host.h
main/ble/: ble_hid_device.c  ble_hid_device.h  connection.c  connection.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_actions.c  hid_actions.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hid_device_le_prf.h  hid_report_data.c  hid_report_data.h
main/rgb/: rgb_utils.c  rgb_utils.h
main/ulp/: bat.S  ulp.c  ulp_bat.h  ulp_internal.h
main/usb/: descriptor_parser.c  descriptor_parser.h  usb_hid_host.c  usb_hid_host.h
main/utils/: adc.c  adc.h  buttons.c  buttons.h  rgb_leds.c  rgb_leds.h  rotary_enc.c  rotary_enc.h  storage.c  storage.h  task_monitor.c  task_monitor.h  temp_sensor.c  temp_sensor.h  ulp.c  ulp.h  vmon.c  vmon.h
main/web/: dns_server.c  dns_server.h  http_server.c  http_server.h  ota_server.c  ota_server.h  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
main/web/front/: index.html  package.json  settings.html
main/web/front/js/: action-config.jsx  settings.jsx
main/web/front/lib/: index.min.html  manifest.json  offline.html  settings.js  settings.min.html  sw.js
main/web/front/meta/: build-html.js
meta/: charging_from_wall.txt
src/: CMakeLists.txt  ble_hid_device.c  ble_hid_device.h  hid_bridge.c  hid_bridge.h  main.c  usb_hid_host.c  usb_hid_host.h
